# genesis_rr

./: Cargo.toml  unlink.lib
dll/: genesis_rr.vcxproj
dll/src/: audio.cpp  audio.h  base64.cpp  cheats.cpp  cheats.h  hooking.cpp  main.cpp  native.h  native_invoke.cpp  offsets.h  overridable_fields.cpp
src/ui_bin/: controls.rs  main.rs
src/ui_bin/ipc/: mod.rs
