[package]
name = "genesis_rr"
version = "0.1.0"
authors = ["567"]
edition = "2018"

[lib]
name = "genesis_rr"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "UnityCrashHandler64"
path = "src/ui_bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#obfstr = "0.1.0"
base64 = "0.10.1"
libc = "0.2.62"
gcc = "0.3"
winapi = { version = "0.3.8", features = ["winuser", "libloaderapi"] }
piston_window = "0.104.0"

[features]
winhttp = []